--- a/src/pages/test/test.html
+++ b/src/pages/test/test.html
@@ -16,9 +16,10 @@
 <ion-content padding class="question-wrapper">
   <div class="question">
     <p class="question-text" [style]='setFontSize(question)'>{{question}}</p>
-    <div class="question-variant" *ngFor="let variant of variants" (click)="setNextQuestion()">
+    <div class="question-variant" *ngFor="let variant of variants; let i = index" (click)="variantClick(variant.index, i)">
       <div class="question-variant__circle"></div>
-      <div class="question-variant__text">{{variant}}</div>
+      <div class="question-variant__text">{{variant.text}}</div>
     </div>
+    <button (click)="setNextQuestion()" *ngIf="showNextButton">Next question</button>
   </div>
 </ion-content>
