added truncate fix

--- a/src/pages/direction/direction.html
+++ b/src/pages/direction/direction.html
@@ -5,6 +5,10 @@
       <ion-icon name="md-arrow-back"></ion-icon>
     </button>
     <ion-title>{{directionName}}</ion-title>
+
+    <button (click)="addLesson()" class="custom-back-button">
+      <ion-icon name="md-arrow-back"></ion-icon>
+    </button>
   </ion-navbar>
 
 </ion-header>
