--- a/src/pages/lesson-add/lesson-add.html
+++ b/src/pages/lesson-add/lesson-add.html
@@ -14,6 +14,11 @@
 
 
 <ion-content padding>
+  <h1>Имя:</h1>
+  <div class="title-create">
+    <input type="text" placeholder="Имя...">
+  </div>
+  <h1>Теория:</h1>
   <div class="lesson-create">
     <textarea id="" cols="30" rows="5" class="lesson-create-area" placeholder="Теория..."></textarea>
   </div>
@@ -22,15 +27,15 @@
 
   <div class="test-selector">
 
-    <div class="test-selector__item test-selector__create" *ngIf="questions.length === 0">
+    <div class="test-selector__item test-selector__create" *ngIf="questions.length === 0" (click)="addQuestion()">
       <div>
         <p>+</p>
       </div>
     </div>
 
     <div *ngIf="questions.length" class="test-selector__item__wrapper">
-      <div class="test-selector__item" *ngFor="let question of questions">{{question.title}}</div>
-      <div class="test-selector__item test-selector__create">
+      <div class="button__item" *ngFor="let question of questions" (click)="addQuestion(question)">{{question.title}}</div>
+      <div class="button__item test-selector__create" (click)="addQuestion()">
         <div>
           <p>+</p>
         </div>
