--- a/src/pages/direction/direction.html
+++ b/src/pages/direction/direction.html
@@ -7,7 +7,7 @@
     <ion-title>{{directionName}}</ion-title>
 
     <button (click)="addLesson()" class="custom-back-button">
-      <ion-icon name="md-arrow-back"></ion-icon>
+      <ion-icon ios="ios-create" md="md-create"></ion-icon>
     </button>
   </ion-navbar>
 
