--- a/src/pages/lesson/lesson.html
+++ b/src/pages/lesson/lesson.html
@@ -9,7 +9,7 @@
   <ion-navbar>
     <ion-title>{{title}}</ion-title>
     <button (click)="goToTest(test)" class="custom-button-white">
-      <ion-icon name="list"></ion-icon>
+      <ion-icon name="clipboard"></ion-icon>
     </button>
   </ion-navbar>
 
