--- a/src/pages/lesson-add/lesson-add.html
+++ b/src/pages/lesson-add/lesson-add.html
@@ -7,8 +7,15 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Добавить урок: {{title}}</ion-title>
+    <ion-title>Добавить урок</ion-title>
+    <ion-buttons end>
+      <button (click)="submitLesson()">
+        <ion-icon md="md-create" class="ionic-button-class">
+
+        </ion-icon></button>
+    </ion-buttons>
   </ion-navbar>
+
 
 </ion-header>
 
@@ -16,11 +23,11 @@
 <ion-content padding>
   <h1>Имя:</h1>
   <div class="title-create">
-    <input type="text" placeholder="Имя...">
+    <input type="text" placeholder="Имя..." [(ngModel)]="title" (input)="truncateTitle()">
   </div>
   <h1>Теория:</h1>
   <div class="lesson-create">
-    <textarea id="" cols="30" rows="7" class="lesson-create-area" placeholder="Теория..."></textarea>
+    <textarea id="" cols="30" rows="7" class="lesson-create-area" placeholder="Теория..." [(ngModel)]="theory"></textarea>
   </div>
 
   <h1>Вопросы:</h1>
@@ -34,12 +41,15 @@
     </div>
 
     <div *ngIf="questions.length" class="test-selector__item__wrapper">
-      <div class="button__item" *ngFor="let question of questions" (click)="addQuestion(question)">{{question.title}}</div>
+      <div class="button__item" *ngFor="let question of questions; let i = index" (click)="addQuestion(question)">{{i + 1}}</div>
+
       <div class="button__item test-selector__create" (click)="addQuestion()">
         <div>
           <p>+</p>
         </div>
       </div>
+
+
     </div>
 
   </div>
