--- a/src/pages/question-add/question-add.html
+++ b/src/pages/question-add/question-add.html
@@ -23,7 +23,7 @@
     <textarea id="" cols="30" rows="5" class="lesson-create-area" placeholder="Вопрос..." [(ngModel)]="question"></textarea>
   </div>
 
-  <h2>Варианты:</h2>
+  <h2>Варианты ответов:</h2>
 
   <div class="question-selector">
 
