--- a/src/pages/test-result/test-result.html
+++ b/src/pages/test-result/test-result.html
@@ -25,5 +25,9 @@
         <p>{{i + 1}}</p>
       </div>
     </div>
+
+  </div>
+  <div class="result_res">
+    <p>{{"Вам защитано: "+numXp+"exp"}}</p>
   </div>
 </ion-content>
